[package]
authors = ["Antti Keränen <detegr@gmail.com>"]
name = "lanistatsit-backend"
version = "0.1.0"

[dependencies]
postgres = "0.11"
r2d2 = "0.7.0"
r2d2_postgres = "0.10.1"
rand = "0.3"
rustc-serialize = "0.3"
rustful = "0.9.0"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.postgres_macros]
version = "0.1"
optional = true

[features]
default = ["clippy", "postgres_macros"]
